# rit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: database.rs  errors.rs  lib.rs  lockfile.rs  main.rs  refs.rs  repository.rs  workspace.rs
src/commands/: add.rs  commit.rs  init.rs  mod.rs  status.rs
src/id/: additive.rs  id.rs  mod.rs  one_off.rs
src/index/: checksum.rs  entry.rs  errors.rs  index.rs  mod.rs
src/objects/: blob.rs  commit.rs  entry.rs  id.rs  mod.rs  tree.rs
src/workspace/: entry.rs  mod.rs  stat.rs  workspace.rs
tests/: add_test.rs  init_test.rs  status_changed_test.rs  status_deleted_test.rs  status_modified_test.rs  status_test.rs  status_untracked_test.rs
tests/common/: mod.rs
