[package]
name = "rit"
version = "0.1.0"
authors = ["stepnivlk <tomas@stepnivlk.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libflate = "0.1"
sha1 = { version = "0.6.0", features = ["std"] }
rand = "0.7"
bytes = "0.5"
chrono = "0.4"
indexmap = "1.3.2"
pathdiff = "0.1.0"
